Fix panel link overflow

--- a/source/style/_theme/panel.less
+++ b/source/style/_theme/panel.less
@@ -93,6 +93,7 @@
 				margin-bottom: .25rem;
 				vertical-align: top;
 				width: auto;
+				max-width: 100%;
 			}
 
 			@media screen and (min-width: (@breakpoint * 1.5)) {
